update preprocessing notebook

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-07T13:29:35.013891684Z",
-     "start_time": "2023-08-07T13:29:35.009285311Z"
+     "end_time": "2023-08-08T03:59:25.211386446Z",
+     "start_time": "2023-08-08T03:59:25.204403323Z"
     }
    }
   },
@@ -28,8 +28,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-07T13:29:35.014548494Z",
-     "start_time": "2023-08-07T13:29:35.009611074Z"
+     "end_time": "2023-08-08T03:59:25.212612568Z",
+     "start_time": "2023-08-08T03:59:25.209419055Z"
     }
    }
   },
@@ -43,8 +43,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-07T13:29:35.014921325Z",
-     "start_time": "2023-08-07T13:29:35.009802189Z"
+     "end_time": "2023-08-08T03:59:25.213357617Z",
+     "start_time": "2023-08-08T03:59:25.212201249Z"
     }
    }
   },
@@ -58,20 +58,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-07T13:29:35.031255464Z",
-     "start_time": "2023-08-07T13:29:35.016806497Z"
+     "end_time": "2023-08-08T03:59:25.220370098Z",
+     "start_time": "2023-08-08T03:59:25.213058942Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
       "text/plain": "{'JAX_004',\n 'JAX_017',\n 'JAX_018',\n 'JAX_020',\n 'JAX_022',\n 'JAX_028',\n 'JAX_031',\n 'JAX_033',\n 'JAX_068',\n 'JAX_070',\n 'JAX_072',\n 'JAX_079',\n 'JAX_105',\n 'JAX_113',\n 'JAX_117',\n 'JAX_118',\n 'JAX_122',\n 'JAX_144',\n 'JAX_149',\n 'JAX_156',\n 'JAX_159',\n 'JAX_161',\n 'JAX_164',\n 'JAX_165',\n 'JAX_166',\n 'JAX_167',\n 'JAX_168',\n 'JAX_175',\n 'JAX_178',\n 'JAX_179',\n 'JAX_203',\n 'JAX_204',\n 'JAX_207',\n 'JAX_214',\n 'JAX_224',\n 'JAX_236',\n 'JAX_240',\n 'JAX_251',\n 'JAX_260',\n 'JAX_264',\n 'JAX_269',\n 'JAX_273',\n 'JAX_276',\n 'JAX_280',\n 'JAX_314',\n 'JAX_359',\n 'JAX_412',\n 'JAX_416',\n 'JAX_427',\n 'JAX_467',\n 'JAX_474',\n 'JAX_505',\n 'JAX_559'}"
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +82,9 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-07T13:29:35.046931217Z",
-     "start_time": "2023-08-07T13:29:35.032087906Z"
+     "end_time": "2023-08-08T16:39:29.022243689Z",
+     "start_time": "2023-08-08T16:39:28.979939120Z"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -3307,6 +3300,142 @@
    "metadata": {
     "collapsed": false,
     "is_executing": true
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "p2 = sorted(glob.glob(\"/home/myid/zis35724/jupyter/satnerf/datasets/Track3-preprocess/*\"))\n",
+    "xx = set([\"JAX_\" + p.split(\"/\")[-1].split(\"_\")[1] for p in p2])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:10:08.485605035Z",
+     "start_time": "2023-08-08T04:10:08.463834217Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'JAX_004',\n 'JAX_017',\n 'JAX_018',\n 'JAX_020',\n 'JAX_022',\n 'JAX_028',\n 'JAX_031',\n 'JAX_033',\n 'JAX_068',\n 'JAX_070',\n 'JAX_072',\n 'JAX_079',\n 'JAX_105',\n 'JAX_113',\n 'JAX_117',\n 'JAX_118',\n 'JAX_122',\n 'JAX_144',\n 'JAX_149',\n 'JAX_156',\n 'JAX_159',\n 'JAX_161',\n 'JAX_164',\n 'JAX_165',\n 'JAX_166',\n 'JAX_167',\n 'JAX_168',\n 'JAX_175',\n 'JAX_178',\n 'JAX_179',\n 'JAX_203',\n 'JAX_204',\n 'JAX_207',\n 'JAX_214',\n 'JAX_224',\n 'JAX_236',\n 'JAX_240',\n 'JAX_251',\n 'JAX_260',\n 'JAX_264',\n 'JAX_269',\n 'JAX_273',\n 'JAX_276',\n 'JAX_280',\n 'JAX_314',\n 'JAX_359',\n 'JAX_412',\n 'JAX_416',\n 'JAX_427',\n 'JAX_467',\n 'JAX_474',\n 'JAX_505',\n 'JAX_559'}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xx"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:10:13.226208593Z",
+     "start_time": "2023-08-08T04:10:13.218758033Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "set()"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aoi_ids - xx"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:10:57.980846962Z",
+     "start_time": "2023-08-08T04:10:57.925981212Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "set()"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xx - aoi_ids"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:11:02.913313084Z",
+     "start_time": "2023-08-08T04:11:02.896801902Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "53"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(xx)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:11:11.569742572Z",
+     "start_time": "2023-08-08T04:11:11.525260311Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "53"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(aoi_ids)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-08T04:11:26.466679445Z",
+     "start_time": "2023-08-08T04:11:26.421643729Z"
+    }
    }
   },
   {
